<resources>
    <string name="app_name">UrbanGym</string>
    <string name="login">Log in</string>
    <string name="email">EMAIL</string>
    <string name="emailaddress">EMAILADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="forgotpassword">Forgot Your Password</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
</resources>
